[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Crate.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/heart.png" type="Texture" id=4]
[ext_resource path="res://Assets/ArchivoNarrow-SemiBold.ttf" type="DynamicFontData" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.286275, 0.313726, 0.341176, 1 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 200, 200 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 100, 0, 100, -100, 0, 100, 100, 0, -100, -100, 0, -100 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="Ground" type="StaticBody" parent="."]
editor/display_folded = true

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0944796, 0.0631865, 0.0122795 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 3 )

[node name="Crate" parent="." groups=[
"Crate",
] instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.67044, 1.37587, -2.57926 )

[node name="Crate2" parent="." groups=[
"Crate",
] instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54735, 2.63189, 0.0999665 )

[node name="Crate3" parent="." groups=[
"Crate",
] instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.56277, 0.647794, 0.439583 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.939326, 0.165016, 0.300728, -0.320125, 0.736663, 0.595691, -0.123237, -0.655818, 0.744792, 0, 4.22297, 0 )
shadow_enabled = true
shadow_color = Color( 0.129412, 0.145098, 0.160784, 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50104, 0 )

[node name="HUD" type="Node2D" parent="."]
editor/display_folded = true

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_right = 192.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.25098 )

[node name="ColorRect2" type="ColorRect" parent="HUD"]
margin_left = 832.0
margin_right = 1024.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Lives" type="Node2D" parent="HUD"]
position = Vector2( 832, 0 )

[node name="Heart1" type="Sprite" parent="HUD/Lives"]
position = Vector2( 30, 30 )
texture = ExtResource( 4 )

[node name="Heart2" type="Sprite" parent="HUD/Lives"]
position = Vector2( 60, 30 )
texture = ExtResource( 4 )

[node name="Heart3" type="Sprite" parent="HUD/Lives"]
position = Vector2( 90, 30 )
texture = ExtResource( 4 )

[node name="Heart4" type="Sprite" parent="HUD/Lives"]
position = Vector2( 120, 30 )
texture = ExtResource( 4 )

[node name="Heart5" type="Sprite" parent="HUD/Lives"]
position = Vector2( 150, 30 )
texture = ExtResource( 4 )

[node name="Score" type="Label" parent="HUD"]
margin_top = 7.0
margin_right = 183.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 4 )
text = "1000"
align = 2
[connection signal="body_entered" from="Crate" to="Player" method="_on_Crate_body_entered"]
[connection signal="body_entered" from="Crate2" to="Player" method="_on_Crate_body_entered"]
[connection signal="body_entered" from="Crate3" to="." method="_on_Crate_body_entered"]
